
MASTER

* Allow adapter to return multipe results sets, for example from stored procedures. [Chris Hall]


* 2.3.4

* For tables that named with schema(ex. rails.users), they could not get length of column.
  column of varchar(40) gets length => nil. Ticket #27 & #15 [Ken Tachiya]

* Altered limited_update_conditions regex conditions, the .* would greedily fail 
  if the where_sql had WHERE in a table or field, etc. [Ransom Briggs]

* Changing test to allow ENV['ARUNIT_DB_NAME'] as the database name for the test units. 
  Matches up with AR conventions. [Ransom Briggs]


2.3.3
  
* Revert #ad83df82 and again cache column information at the connection's instance. The 
  previous commit was causing all sorts of view and schema reflection problems. [Ken Collins]


2.3.2

* Insert queries that include the word "insert" as a partial column name with the word 
  "id" as a value were falsely being matched as identity inserts. [Sean Caffery/bfabry]

* Delegate all low level #raw_connection calls to #raw_connection_run and #raw_connection_do
  which abstract out the low level modes in the connection options at that point. [Ken Collins]

* Remove DBI dependency and go straight ODBC for speed improvement [Erik Bryn]

* Leave order by alone when same column crosses two tables [Ransom Briggs]


* 2.3 * (December 1st, 2009)

* Table and column aliases can handle many. Resolves ticket #19 [stonegao]

* Coerce a few tests that were failing in 2.3.x [Ken Collins]

* Change column/view cache to happen at class level. Allows connection pool to share same
  caches as well as the ability to expire the caches when needed. Also fix change_column so 
  that exceptions are not raised when the column contains an existing default. [Ken Collins]

* Allow query_requires_identity_insert? method to return quoted table name in situations where the 
  INSERT parts are not quoted themselves. [Gary/iawgens, Richard Penwell, Ken Collins]
